--- a/homework.html
+++ b/homework.html
@@ -2,6 +2,7 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>คลังการบ้าน 📚</title>
   <link rel="stylesheet" href="style.css">
@@ -12,20 +13,20 @@
     <header>
       <h1>คลังการบ้าน 📚</h1>
       <div class="actions">
-        <button id="addHomeworkBtn">➕ เพิ่มการบ้าน</button>
-        <button id="downloadBtn">💾 ดาวน์โหลดข้อมูล</button>
-        <button id="uploadBtn">📂 อัปโหลดข้อมูล</button>
+        <button id="addHomeworkBtn" type="button">➕ เพิ่มการบ้าน</button>
+        <button id="downloadBtn" type="button">💾 ดาวน์โหลดข้อมูล</button>
+        <button id="uploadBtn" type="button">📂 อัปโหลดข้อมูล</button>
         <input type="file" id="uploadFile" accept="application/json" style="display:none" />
       </div>
     </header>
 
-    <section id="homeworkList" class="grid"></section>
+    <section id="homeworkList" class="grid" aria-live="polite"></section>
   </div>
 
-  <div id="modal" class="modal hidden">
+  <div id="modal" class="modal hidden" aria-modal="true" role="dialog">
     <div class="modal-content">
       <h2>เพิ่มการบ้านใหม่</h2>
-      <form id="homeworkForm">
+      <form id="homeworkForm" autocomplete="off">
         <input type="text" id="title" placeholder="ชื่อการบ้าน" required />
         <textarea id="description" placeholder="รายละเอียดการบ้าน" required></textarea>
         <input type="date" id="dueDate" required />
