--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Loading Animation Overlay -->
+    <div id="loading-overlay">
+        <div class="loading-spinner"></div>
+        <div class="loading-text">กำลังเข้าสู่โลกแห่งความสุข 🎂</div>
+    </div>
+
     <div class="infographic-container center-countdown">
         <!-- Main Title -->
         <div class="main-title">
-            <h1>🎂 สุขสันต์วันเกิด 💖</h1>
+            <h1>🎂 สุขสันต์วันเกิดนะคนเก่ง 💖</h1>
             <p class="subtitle">ขอให้ปีนี้เต็มไปด้วยรอยยิ้ม ความสุข และความรัก</p>
         </div>
 
@@ -51,10 +57,8 @@
         <div class="info-card" style="text-align: center; background: linear-gradient(135deg, rgba(167, 243, 208, 0.1), rgba(191, 219, 254, 0.1));">
             <span class="icon-large">💌</span>
             <h2 style="color: #059669; margin-bottom: 20px;">ข้อความพิเศษ</h2>
-            <p style="font-size: 1.2rem; color: #6b7280; line-height: 1.6; max-width: 600px; margin: 0 auto; margin-bottom: 30px;">
-                วันนี้เป็นวันที่พิเศษมาก เพราะเป็นวันที่คนพิเศษอย่างเธอเกิดมา 
-                ขอให้ทุกวันของเธอเต็มไปด้วยความสุข เสียงหัวเราะ และสิ่งดีๆ 
-                ที่เธอสมควรได้รับ 🌸✨
+            <p id="specialMessage" style="font-size: 1.2rem; color: #6b7280; line-height: 1.6; max-width: 600px; margin: 0 auto; margin-bottom: 30px;">
+                <!-- ข้อความจะถูกเปลี่ยนโดย JS -->
             </p>
             <a href="https://forms.gle/t3Jom7Pfuwqy4AWR9" target="_blank" class="form-link-btn" id="specialFormBtn">
                 📝 แบบฟอร์มพิเศษ
