--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Birthday Infographic 💖</title>
+    <title>Birthday💖</title>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;600;700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -11,13 +11,13 @@
     <!-- Loading Animation Overlay -->
     <div id="loading-overlay">
         <div class="loading-spinner"></div>
-        <div class="loading-text">กำลังเข้าสู่โลกแห่งความสุข 🎂</div>
+        <div class="loading-text">กำลังเข้าสู่ระบบ 🎂</div>
     </div>
 
     <div class="infographic-container center-countdown">
         <!-- Main Title -->
         <div class="main-title">
-            <h1>🎂 สุขสันต์วันเกิดนะคนเก่ง 💖</h1>
+            <h1>ข้อความนี้ยังไม่ใช่ข้อความจริง</h1>
             <p class="subtitle">ขอให้ปีนี้เต็มไปด้วยรอยยิ้ม ความสุข และความรัก</p>
         </div>
 
