--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
                 สามารถเข้าแบบฟอร์มได้เฉพาะวันที่ 27 กันยายนเท่านั้น
             </div>
         </div>
+
+        <!-- Footer -->
+        <div class="info-card bottom-card" style="text-align: center; background: linear-gradient(135deg, rgba(191, 219, 254, 0.1), rgba(167, 243, 208, 0.1));">
+            <h2>กำลังพัฒนาเพิ่มระบบอื่นๆขึ้นมา</h2>
+            <p style="color: #6b7280; margin-top: 10px;">เว็บไซต์นี้ถูกสร้างมาโดย คนที่แอบชอบเธอ💖</p>
+        </div>
     </div>
     <script src="js/script.js"></script>
 </body>
