--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <!-- Countdown Timer (อยู่ตรงกลาง) -->
         <div class="info-card countdown-card">
             <span class="icon-large">⏰</span>
+            <h1 style="text-align: center;">อายุปัจจุบัน: <span id="ageValue">-</span> ปี</h1>
             <h2 style="text-align: center; margin-bottom: 20px; color: #374151;">นับถอยหลังวันเกิด</h2>
             <h3 style="text-align: center; margin-bottom: 30px; color: #059669;">27 กันยายน</h3>
             <div id="countdown" class="countdown-container">
@@ -44,7 +45,7 @@
                     <div>วินาที</div>
                 </div>
             </div>
-            <div id="birthdayMessage" style="text-align: center; font-size: 1.1rem; color: #059669; display: none;">
+            <div  id="birthdayMessage" style="text-align: center; font-size: 1.1rem; color: #059669; display: none;">
                 🎉 สุขสันต์วันเกิด! 🎂
             </div>
             <div style="text-align: center; margin-top: 20px; padding: 15px; background: rgba(167, 243, 208, 0.2); border-radius: 12px;">
@@ -52,7 +53,6 @@
                 <div id="currentTime" style="font-size: 1.1rem; font-weight: 600; color: #059669;"></div>
             </div>
         </div>
-
         <!-- Special Message -->
         <div class="info-card" style="text-align: center; background: linear-gradient(135deg, rgba(167, 243, 208, 0.1), rgba(191, 219, 254, 0.1));">
             <span class="icon-large">💌</span>
@@ -74,7 +74,7 @@
             <h2>✨กำลังพัฒนาเพิ่มระบบอื่นๆขึ้นมา✨</h2>
             <p style="color: #6b7280; margin-top: 10px;">เว็บไซต์นี้ถูกสร้างมาโดย คนที่แอบชอบเธอ💖</p>
         </div>
-    </div>
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
